# VPNSentinel

./: .env-TEST  .env.example  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .vulture_allowlist.py  CLAUDE.md  DNS_LEAK_FIX_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  PR_DRAFT.md  QUICK_REFERENCE.md  README.md  compose-TEST.yaml  compose-no-vpn.yaml  compose.yaml  demo_versioning.sh  get_version.sh  pyproject.toml  pytest.ini  test_client_call.sh  unit-test-results.xml  vpn-sentinel-server.py
.claude/: settings.json
.claude/agents/: coding-standards-auditor.md  security-auditor.md  ticket-gate.md  vpnsentinel-reviewer.md
.claude/commands/: build.md  ci-health.md  gate-ticket.md  lint.md  local-env.md  test.md
.claude/memory/: MEMORY.md  ai-tooling-claude.md  branch-model.md  execution-mode-preference.md  in-memory-state.md  lean-repo-preference.md
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/dockerhub/: client_docker-repository-short.txt  (+1 more)
certs/: README.md
deployments/: README.md
dockerhub/: client_description.md  client_docker-repository-overview.md  client_docker-repository-short.txt  server_description.md  server_docker-repository-overview.md  server_docker-repository-short.txt
docs/: AI_INTERACTION_GUIDE.md  ARCHITECTURE.md  CODEQL_SECURITY.md  ENVIRONMENT_VARIABLES.md  GITHUB_SECRETS_SETUP.md  IMPROVEMENT_AREAS.md  PROJECT_OVERVIEW.md  PYTHON_LIFECYCLE.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  TELEGRAM.md  TESTING_AND_RELIABILITY.md  TESTING_GUIDE.md  VERSIONING.md  refactor-plan.md
docs/images/: README.md
keepalive-client/: Dockerfile  keepalive-client.sh  keepalive.sh
keepalive-server/: Dockerfile  keepalive-server.py
lib/: health-common.sh
scripts/: demo_versioning.sh  find-dead-code.sh  generate_dashboard_screenshot.sh  get_version.sh  release-run.sh  test_client_call.sh  update_dockerhub_description.sh  version-lib.sh
tests/: .env.test  README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  coverage.xml  create-root-user.sql  docker-compose.test.yaml  helpers.py  requirements.txt  run_tests.sh  test_health_server_simple.py  test_telegram_manual.py  {}
vpn-sentinel-client/: Dockerfile  README.md  health-monitor.py  health-monitor.sh  healthcheck.sh  vpn-sentinel-client.py  vpn-sentinel-client.sh
vpn-sentinel-server/: Dockerfile  health-monitor-wrapper.sh  health-monitor.py  vpn-sentinel-server.py
vpn_sentinel_common/: __init__.py  api_routes.py  config.py  country_codes.py  dashboard_routes.py  health.py  health_monitor.py  health_routes.py  log_utils.py  logging.py  network.py  payload.py  security.py  server_info.py  server_utils.py  telegram.py  telegram_commands.py  utils.py  validation.py  version.py
vpn_sentinel_server/: __init__.py  logging.py  security.py  server_info.py  telegram.py  utils.py  validation.py
(+195 files in other folders)
