[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-sentinel"
version = "0.0.0"
description = "Shared helpers for VPNSentinel (vpn_sentinel.common)"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "agigante80" } ]
license = { text = "MIT" }
dependencies = ["requests>=2.33.1"]

[project.scripts]
vpn-sentinel-server = "vpn_sentinel.server.__main__:main"
vpn-sentinel-client = "vpn_sentinel.client.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vpn_sentinel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["manual"]
addopts = "-v --strict-markers --disable-warnings --tb=short"
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow running tests",
  "network: Tests that require network access",
  "docker: Tests that require Docker",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 120
target-version = ["py312"]
